# truthfulness-evaluator

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: README.md  index.md
docs/api/: adapters.md  chains.md  core.md  graph.md  models.md  protocols.md  reporting.md  workflows.md
docs/architecture/: design.md  overview.md  workflows.md
docs/examples/: basic.md  consensus.md  filesystem.md
docs/extending/: extractors.md  formatters.md  gatherers.md  plugins.md  verifiers.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/usage/: cli.md  internal-verification.md  python-api.md  workflows.md
src/truthfulness_evaluator/: __init__.py  cli.py  config.py  graph.py  graph_internal.py  models.py  protocols.py  reporting.py  truth.py
src/truthfulness_evaluator/agents/: __init__.py  evidence_agent.py
src/truthfulness_evaluator/chains/: __init__.py  consensus.py  evidence.py  extraction.py  internal_verification.py  verification.py
src/truthfulness_evaluator/cli/: __init__.py  truth.py
src/truthfulness_evaluator/core/: __init__.py  config.py  grading.py  llm.py  logging_config.py  protocols.py
src/truthfulness_evaluator/evidence/: __init__.py  agent.py
src/truthfulness_evaluator/extractors/: __init__.py  simple.py  triplet.py
src/truthfulness_evaluator/formatters/: __init__.py  html.py  json_fmt.py  markdown.py
src/truthfulness_evaluator/gatherers/: composite.py  filesystem.py  web.py
src/truthfulness_evaluator/llm/: __init__.py  (+1 more)
tests/: __init__.py  conftest.py  test_adapters.py  test_config.py  test_grading.py  test_models.py  test_reporting.py
(+60 files in other folders)
