[tool.poetry]
name = "truthfulness-evaluator"
version = "0.1.0"
description = "Multi-model truthfulness evaluation with filesystem-aware evidence gathering"
authors = ["John Sosoka"]
readme = "README.md"
packages = [{include = "truthfulness_evaluator", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^1.0.0"
langchain = "^1.0.0"
langchain-openai = "^0.3.0"
langchain-anthropic = "^0.3.0"
langchain-community = "^0.3.0"
pydantic = "^2.0"
pydantic-settings = "^2.0"
rich = "^13.0"
typer = ">=0.12,<1.0"
python-dotenv = "^1.0.0"
requests = "^2.31"
beautifulsoup4 = "^4.12"
jinja2 = "^3.1"
duckduckgo-search = "^8.1.1"
ddgs = "^9.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
pytest-mock = "^3.14"
black = "^24.0"
ruff = "^0.5.0"
mypy = "^1.10"

[tool.poetry.scripts]
truth-eval = "truthfulness_evaluator.truth:app"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6"
mkdocs-material = "^9.5"
mkdocstrings = {extras = ["python"], version = "^0.25"}
mkdocs-autorefs = ">=0.5,<1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring real LLM API keys",
    "slow: tests that take more than 5 seconds",
]
